--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Keycloakify Svelte</title>
+    <title>Idyllic Identity</title>
   </head>
   <body>
     <main id="kc-root"></main>
